<resources>
	<string name="app_name">Beem</string>
	<string name="OkButton">Ok</string>
	<string name="ClearButton">Clear</string>
	<string name="CancelButton">Cancel</string>
	<string name="AcceptButton">Authorize</string>
	<string name="RefuseButton">Deny</string>
	<string name="JabberID">Jabber ID</string>
	<string name="Password">Password</string>
	<string name="Continue">Continue</string>
	<string name="AccountConfigureManualConfiguration">Manual Configuration</string>
	<string name="BeemJabberID">Jabber ID</string>
	<string name="BeemApplicationConnect">Connecting...</string>
	<string name="BeemServiceDescription">Use Beem Service</string>
	<string name="BeemServiceCreated">Beem Service Created</string>
	<string name="BeemServiceDestroyed">Beem Service Destroyed</string>
	<string name="CDChat">Chat</string>
	<string name="CDJoinMUC">Join MUC</string>
	<string name="CDCall">Call</string>
	<string name="CDInfos">Manage User</string>
	<string name="AddCActTitle">Beem - Add a contact</string>
	<string name="AddCLogin">Username</string>
	<string name="AddCAlias">Alias</string>
	<string name="AddCGroup">Group</string>
	<string name="AddCOkButton">Add</string>
	<string name="AddCContactAdded">Contact added</string>
	<string name="AddCContactAddedError">Error Contact not added</string>
	<string name="AddCContactAddedLoginError">Error Login</string>
	<string name="AddCBadForm">Bad form</string>
	<string name="AddCContactAlready">Contact already exist</string>
	<string name="ChangeStatusActTitle">Beem - Change my status</string>
	<string name="ChangeStatusType">My status</string>
	<string name="ChangeStatusMessage">My personal message</string>
	<string name="OpenContactList">Open contact list</string>
	<string name="MenuAddContact">Add new contact</string>
	<string name="MenuAccountAbout">Beem Project</string>
	<string name="MenuAccountCreate">Create account</string>
	<string name="MenuConnection">Edit account</string>
	<string name="ChangeStatusOk">Updating status</string>
	<string name="ChangeStatusNoChange">Nothing to change</string>
	<string name="my_avatar">My avatar</string>
	<string name="select_avatar">Choose your avatar</string>
	<string name="take_photo">Take a photo</string>
	<string name="pick_photo">Select a picture</string>
	<string name="delete_avatar">No avatar</string>
	<string name="photoPickerNotFoundText">Photo picker not found</string>
	<string name="SettingsText">Edit your username</string>
	<string name="SettingsPassword">Edit your password</string>
	<string name="SettingsProxy">Proxy</string>
	<string name="SettingsProxyProxy">Use a proxy server</string>
	<string name="SettingsProxySummary">Login through a proxy server</string>
	<string name="SettingsProxyType">Protocol</string>
	<string name="SettingsProxyTypeSummary">Choose the proxy server type</string>
	<string name="SettingsProxyServer">Edit proxy server address</string>
	<string name="SettingsProxyPort">Edit proxy server port</string>
	<string name="SettingsProxyUser">Optional, allow to authenticate yourself on the proxy server</string>
	<string name="SettingsProxyPassword">Optional, allow to authenticate yourself on the proxy server</string>
	<string name="SettingsAdvanced">Advanced</string>
	<string name="SettingsAdvancedOptions">Specific server option</string>
	<string name="SettingsAdvancedRecoDelay">Modify reconnection delay</string>
	<string name="SettingsAdvancedSpecOpt">Check this box if you want to use a specific server for your connection</string>
	<string name="SettingsAdvancedAddOpt">Edit the server address</string>
	<string name="SettingsAdvancedPortOpt">Edit the server port</string>
	<string name="SettingsResourceTitle">Resource</string>
	<string name="SettingsPriorityTitle">Priority</string>
	<string name="SettingsNicknameTitle">Default nickname for MUC</string>
	<string name="SettingsHLSTitle">Highlights</string>
	<string name="SettingsResourceSummary">Set the XMPP resource of your client </string>
	<string name="SettingsPrioritySummary">Set the priority of your client</string>
	<string name="SettingsNicknameSummary">Set the default nickname when joining MUC</string>
	<string name="SettingsHLSSummary">Comma-separated list of words (other than your nickname) that will highlight you</string>
	<string name="contact_list_preferences">Buddy list</string>
	<string name="contact_list_preferences_sum">A set of display options for your buddy list
	</string>
	<string name="CLP_hide_groups">Hide groups</string>
	<string name="CLP_hide_groups_sum">Check this option to hide groups</string>
	<string name="CLP_hidden_contact">Hide buddies</string>
	<string name="CLP_hidden_contact_sum">Check this option to hide unconnected buddies
	</string>
	<string name="settings_account_username">Username (JID)</string>
	<string name="login_username_info_default">beem@beem-project.com</string>
	<string name="settings_account_password">Password</string>
	<string name="settings_account_server">Server</string>
	<string name="settings_account_port">Port</string>
	<string name="settings_advanced_service_behaviour">Service behaviour</string>
	<string name="settings_advanced_sum">A set of options for advanced users</string>
	<string name="settings_xmpp_server">Address</string>
	<string name="comments_xmpp_server">example.com</string>
	<string name="settings_xmpp_port">Port</string>
	<string name="settings_xmpp_use_tls">Require SSL/TLS</string>
	<string name="settings_reco_delay">Reconnection delay</string>
	<string name="comments_xmpp_port">Default: 5222</string>
	<string name="settings_proxy_sum">Settings for proxy usage</string>
	<string name="settings_proxy_use">Connect using a proxy</string>
	<string name="settings_proxy_type_prompt">Choose a type of proxy</string>
	<string name="settings_proxy_server">Server</string>
	<string name="settings_proxy_port">Port</string>
	<string name="comments_proxy_port">Default: 1080</string>
	<string name="settings_proxy_username">Username</string>
	<string name="settings_proxy_password">Password</string>
	<string name="away_chk_title">Enable Auto-away</string>
	<string name="away_chk_sum">Change status to Away when the screen is turned off</string>
	<string name="away_message_title">Away message</string>
	<string name="away_message_sum">The away message that will be displayed</string>
	<string name="away_message_hint">I\'m away, my cellphone screen is off</string>
	<string name="notification_preferences">Notification settings</string>
	<string name="notification_enable_vibrate_title">Enable vibrate</string>
	<string name="notification_enable_vibrate_sum">Enable vibrate on incoming messages</string>
	<string name="notification_snd_title">Message ringtone</string>
	<string name="notification_snd_sum">Set your incoming message ringtone</string>
	<string name="notification_hl_title">Notify only highlights</string>
	<string name="notification_hl_sum">Check if you want to be notified only when you are highlited in MUC</string>
	<string name="settings_chat_compact">Chat compact</string>
	<string name="settings_chat_compact_sum">Set the chat windows compact</string>
	<string name="history">History</string>
	<string name="history_sum">Check this to save chats on the SDCard</string>
	<string name="history_mount">You need to have SDcard mounted and writable to enable history</string>
	<string name="history_on_off">Enable history messages</string>
	<string name="chat_preferences">Chat</string>
	<string name="chat_preferences_sum">History, Layout size ...</string>
	<string name="chat_history_path">History path</string>
	<string name="chat_history_path_sum">Chat conversations are saved in a folder on the SDCard</string>
	<string name="settings_smack_debug">Enable XMPP debug</string>
	<string name="settings_full_jid_login">Use my full JID as username</string>
	<string name="settings_full_jid_login_sum">Need by some server such as Google Talk</string>
	<string name="SubscriptAccept">Subscription accepted</string>
	<string name="SubscriptError">Subscription error</string>
	<string name="SubscriptRefused">Subscription refused</string>
	<string name="SubscriptText">%s wants to add you to his/her buddy list. Do you want to authorize him/her?</string>
	<string name="SubscriptTitle">Authorize buddy?</string>
	<string name="BeemChatManagerNewMessage">You\'ve a new message</string>
	<string name="BeemBroadcastReceiverDisconnect">BEEM: You have been disconnected</string>
	<string name="AcceptContactRequest">%s has just added you to his/her buddy list.</string>
	<string name="AcceptContactRequestFrom">Authorize %s to contact you.</string>
	<string name="login_tag">Beem - Login Activity</string>
	<string name="edit_settings_name">Beem - Settings</string>
	<string name="edit_settings_tag">Beem - EditSettings Activity</string>
	<string name="create_account_name">Beem - Create an account</string>
	<string name="create_account_tag">Beem - CreateAccount Activity</string>
	<string name="contact_list_name">Beem - Contacts</string>
	<string name="contact_list_tag">Beem - ContactList Activity</string>
	<string name="user_info_name">Beem - User Info</string>
	<string name="button_create_account">Create this account</string>
	<string name="button_create_login_account">Create and use this account</string>
	<string name="login_username">Username</string>
	<string name="login_password">Password</string>
	<string name="login_error_dialog_title">Login - Error</string>
	<string name="login_close_dialog_button">Close</string>
	<string name="login_menu_create_account">Create an account</string>
	<string name="login_menu_settings">Settings</string>
	<string name="login_menu_about">About</string>
	<string name="login_about_title">Beem %s - About</string>
	<string name="login_about_msg">
		Beem is an EPITECH Innovative Project. Visit us at
		http://www.beem-project.com !
	</string>
	<string name="login_about_button">Close</string>
	<string name="login_settings_button">Settings</string>
	<string name="login_login_button">Log in</string>
	<string name="login_login_progress">Connecting. Please wait...</string>
	<string name="login_error_msg">Unfortunately, an error occured.\n\nError
		detail:\n%s</string>
	<string name="login_menu_login">Login</string>
	<string name="login_no_connectivity">No internet connection found</string>
	<string name="login_start_msg">Settings configuration in menu</string>
	<string name="loganim_connecting">Connecting ...</string>
	<string name="loganim_authenticating">Authenticating ...</string>
	<string name="loganim_login_success">Login success</string>
	<string name="loganim_login_failed">Login failed</string>
	<string name="settings_menu_create_account">Create an account</string>
	<string name="settings_menu_privacy_lists">Manage my privacy lists</string>
	<string name="settings_saved_ok">The settings have been saved successfully.</string>
	<string name="general_preferences">General preferences</string>
	<string name="user_preferences">User settings (required)</string>
	<string name="user_preferences_advanced">User settings advanced (optional)</string>
	<string name="muc_preferences">MUC settings (optional)</string>
	<string name="network_preferences">Network options</string>
	<string name="proxy_proxy_settings">Proxy settings</string>
	<string name="proxy_user_settings">Proxy settings</string>
	<string name="history_preferences">History</string>
	<string name="chat_layout_option">Chat layout</string>
	<string name="settings_tab_tag_account">edit_settings_tab_account</string>
	<string name="settings_tab_label_account">Account</string>
	<string name="settings_tab_tag_xmpp">edit_settings_tab_xmpp</string>
	<string name="settings_tab_label_xmpp">XMPP</string>
	<string name="account_wizard_configure_text"><b>Please fill in the data for your existing account</b></string>
	<string name="create_account_username">Username</string>
	<string name="create_account_password">Password</string>
	<string name="create_account_confirm_password">Confirm password</string>
</resources>